@@ -1,0 +1,2 @@
+#include_next <fcntl.h>
+#include <sys/fcntl.h>
