@@ -1,0 +1,5 @@
+#include_next <netinet/ip.h>
+
+#ifndef _NETINET_IP_H_
+#define _NETINET_IP_H_
+#endif
