@@ -1,0 +1,7 @@
+#ifndef _NETINET6_IN6_H_
+#define _NETINET6_IN6_H_
+
+/* For struct route_in6 */
+#include <netinet/icmp6.h>
+
+#endif
