@@ -6,5 +6,8 @@
 #include <sys/cdefs.h>
 
 #define	_PATH_SYSPATH	"/sbin:/usr/sbin"
+#define _PATH_FWMEM	"/dev/fwmem"
+#define _PATH_IFCONFIG	"/sbin/ifconfig"
+#define _PATH_MOUNT	"/sbin/mount"
 
 #endif
