@@ -1,0 +1,9 @@
+#ifndef _PTHREAD_NP_H_
+#define _PTHREAD_NP_H_
+
+#include <sys/param.h>
+
+/* non-POSIX facilities are in <pthread.h> */
+#include <pthread.h>
+
+#endif
