@@ -4,4 +4,5 @@
 #define _STRING_H_
 size_t strlcat(char * __restrict, const char * __restrict, size_t);
 size_t strlcpy(char * __restrict, const char * __restrict, size_t);
+void strmode(int, char *);
 #endif
