@@ -1,0 +1,6 @@
+#ifndef _SYS_FCNTL_H_
+#define _SYS_FCNTL_H_
+
+#include <sys/file.h>
+
+#endif
