@@ -1,0 +1,8 @@
+#include_next <sys/sysctl.h>
+
+#ifndef __FREEBSD_GLUE_SYS_SYSCTL_H_
+#define	__FREEBSD_GLUE_SYS_SYSCTL_H_
+
+#include <sys/queue.h>
+
+#endif
